# AutoKuma

./: .dockerignore  .gitignore  .pre-release-hook  CHANGELOG  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.cli  ENTITY_TYPES.md  LICENSE  MONITOR_TYPES.md  README.md  autokuma.toml  release.toml
.github/workflows/: docker-build-push.yml  playground-pages.yml  rust-build-release.yml  snap-build-publish.yaml
autokuma/: Cargo.toml
autokuma-playground/: Cargo.toml  README.md  Trunk.toml  _README.md  index.html  style.css
autokuma-playground/mock-data/: container.json  service.json  system_info.json
autokuma-playground/src/: engine.rs  main.rs
autokuma/kubernetes/: crds-autokuma.yml
autokuma/src/: app_state.rs  config.rs  crdgen.rs  docker_source.rs  entity.rs  error.rs  file_source.rs  kuma.rs  main.rs  migrations.rs  mod.rs  name.rs  sync.rs  util.rs
autokuma/src/sources/: docker_source.rs  file_source.rs  kubernetes_source.rs  mod.rs  source.rs
example/: Cargo.toml
example/src/: main.rs
kuma-cli/: Cargo.toml
kuma-cli/src/: cli.rs  database.rs  docker_host.rs  login.rs  main.rs  maintenance.rs  monitor.rs  notification.rs  status_page.rs  tag.rs  utils.rs
kuma-client/: Cargo.toml  _README.md  build.rs  timezones.json
kuma-client/examples/: create_monitor.rs
kuma-client/src/: client.rs  config.rs  deserialize.rs  error.rs  lib.rs  util.rs
kuma-client/src/models/: docker_host.rs  event.rs  maintenance.rs  mod.rs  monitor.rs  notification.rs  response.rs  status_page.rs  tag.rs
monitors/: example_docker_host.json  example_notification.json  example_tag.json  json_example.json  multi_example.json  toml_example.toml
snap/: snapcraft.yaml
src/: config.rs  error.rs  main.rs  sync.rs  util.rs
src/kuma/: client.rs  error.rs  mod.rs  models.rs
