[workspace]
members = ["autokuma", "kuma-cli", "kuma-client"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Marco Kirchner <mail@bigboot.dev>"]
license = "MIT"
repository = "https://github.com/BigBoot/AutoKuma"

[workspace.dependencies]
async-trait = { version = "0.1.83" }
bollard = { version = "0.18.0", features = ["ssl"] }
clap = { version = "4.5.21", features = ["derive"] }
config = { version = "0.14.1" }
const-str = { version = "0.5.7", features = ["proc"] }
console-subscriber = { version = "0.4.1" }
cute_custom_default = { version = "2.2.0" }
derivative = { version = "2.2.0" }
dirs = { version = "5.0.1" }
flexi_logger = { version = "0.29.6", features = ["compress"] }
futures-util = { version = "0.3.31" }
humantime-serde = { version = "1.1.1" }
inkjet = { version = "0.11.1", default-features = false, features = [
    "language-yaml",
    "language-json",
] }
itertools = { version = "0.13.0" }
kube = { version = "0.96.0", features = ["runtime", "derive", "aws-lc-rs"] }
k8s-openapi = { version = "0.23.0", features = ["earliest"] }
log = { version = "0.4.22" }
native-tls = { version = "0.2.12" }
owo-colors = { version = "4.1.0" }
regex = { version = "1.11.1" }
reqwest = { version = "0.12.9", features = ["json"] }
rust_socketio = { version = "0.6.0", features = ["async"] }
rpassword = { version = "7.4.0" }
serde = { version = "1.0.215", features = ["derive"] }
serde_alias = { version = "0.0.2" }
serde_json = { version = "1.0.132" }
serde_merge = { version = "0.1.3" }
serde_repr = { version = "0.1.19" }
serde_with = { version = "3.11.0", features = ["time_0_3"] }
serde-inline-default = { version = "0.2.2" }
serde_yaml = { version = "0.9.34" }
schemars = { version = "0.8.21" }
sled = { version = "0.34.7" }
unescaper = { version = "0.1.5" }
shadow-rs = { version = "0.36.0" }
strum = { version = "0.26.3", features = ["derive"] }
supports-color = { version = "3.0.1" }
tap = { version = "1.0.1" }
tera = { version = "1.20.0" }
thiserror = { version = "2.0.3" }
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.41.1", features = ["full"] }
toml = { version = "0.8.19" }
totp-rs = { version = "5.6.0", features = ["otpauth"] }
url = { version = "2.5.3", features = ["serde"] }
walkdir = { version = "2.5.0" }
