[workspace]
members = ["autokuma", "kuma-cli", "kuma-client"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Marco Kirchner <mail@bigboot.dev>"]
license = "MIT"
repository = "https://github.com/BigBoot/AutoKuma"

[workspace.dependencies]
async-trait = { version = "0.1.83" }
bincode = { version = "2.0.1", default-features = false, features = [
    "std",
    "serde",
] }
bollard = { version = "0.19.3", features = ["ssl"] }
chrono = { version = "0.4.40" }
clap = { version = "4.5.21", features = ["derive"] }
config = { version = "0.15.11" }
const-str = { version = "0.7.0", features = ["proc"] }
console-subscriber = { version = "0.4.1" }
cute_custom_default = { version = "2.2.0" }
dateparser = { version = "0.2.1" }
derivative = { version = "2.2.0" }
derive_more = { version = "2.0.1" }
dirs = { version = "6.0.0" }
flexi_logger = { version = "0.31.7", features = ["compress"] }
futures-util = { version = "0.3.31" }
humantime-serde = { version = "1.1.1" }
inkjet = { version = "0.11.1", default-features = false, features = [
    "language-yaml",
    "language-json",
] }
itertools = { version = "0.14.0" }
kube = { version = "2.0.1", features = ["runtime", "derive", "aws-lc-rs"] }
k8s-openapi = { version = "0.26.0", features = ["earliest"] }
log = { version = "0.4.22" }
native-tls = { version = "0.2.12" }
owo-colors = { version = "4.1.0" }
rand = { version = "0.9.2" }
regex = { version = "1.11.1" }
reqwest = { version = "0.12.9", features = ["json"] }
rust_socketio = { version = "0.6.0", features = ["async"] }
rpassword = { version = "7.4.0" }
seq-macro = { version = "0.3.6" }
serde = { version = "1.0.215", features = ["derive"] }
serde_alias = { version = "0.0.2" }
serde_json = { version = "1.0.132" }
serde_merge = { version = "0.1.3" }
serde_repr = { version = "0.1.19" }
serde_with = { version = "3.11.0", features = ["time_0_3"] }
serde-inline-default = { version = "1.0.0" }
serde_yaml = { version = "0.9.34" }
schemars = { version = "1.0.4" }
sled = { version = "0.34.7" }
unescaper = { version = "0.1.5" }
shadow-rs = { version = "1.1.1" }
strum = { version = "0.27.1", features = ["derive"] }
supports-color = { version = "3.0.1" }
tap = { version = "1.0.1" }
tera = { version = "1.20.0" }
thiserror = { version = "2.0.3" }
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.41.1", features = ["full"] }
toml = { version = "0.9.8" }
totp-rs = { version = "5.6.0", features = ["otpauth"] }
url = { version = "2.5.3", features = ["serde"] }
walkdir = { version = "2.5.0" }
