[package]
name = "autokuma"
description = "Automates the creation of Uptime Kuma monitors based on Docker container labels"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["uptime-kuma", "docker", "automation", "monitoring"]

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"
required-features = ["kubernetes"]

[features]
default = ["kubernetes"]
kubernetes = ["dep:kube", "dep:k8s-openapi", "dep:schemars", "dep:serde_yaml"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
uptime-kuma-v2 = ["kuma-client/uptime-kuma-v2"]

[dependencies]
kuma-client = { path = "../kuma-client", version = "0.0.0", features = [
    "private-api",
] }

async-trait = { workspace = true }
bincode = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
console-subscriber = { workspace = true, optional = true }
const-str = { workspace = true }
derivative = { workspace = true }
dirs = { workspace = true }
flexi_logger = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
rust_socketio = { workspace = true }
seq-macro = { workspace = true }
serde = { workspace = true }
serde_alias = { workspace = true }
serde_json = { workspace = true }
serde_merge = { workspace = true }
serde_with = { workspace = true }
serde-inline-default = { workspace = true }
strum = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
unescaper = { workspace = true }
sled = { workspace = true }
walkdir = { workspace = true }

# kubernetes
kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
