[package]
name = "kuma-cli"
description = "CLI tool for managing and interacting with Uptime Kuma"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
categories = ["api-bindings"]
keywords = ["uptime-kuma", "api", "automation", "monitoring", "socketio"]

[[bin]]
name = "kuma"
path = "src/main.rs"

[dependencies]
kuma-client = { path = "../kuma-client", version = "0.0.0" }

clap = { workspace = true }
config = { workspace = true }
const-str = { workspace = true }
dirs = { workspace = true }
flexi_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
