[package]
name = "kuma-cli"
description = "CLI tool for managing and interacting with Uptime Kuma"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
categories = ["api-bindings"]
keywords = ["uptime-kuma", "api", "automation", "monitoring", "socketio"]

[[bin]]
name = "kuma"
path = "src/main.rs"

[features]
uptime-kuma-v2 = ["kuma-client/uptime-kuma-v2"]

[dependencies]
kuma-client = { path = "../kuma-client", version = "0.0.0" }

clap = { workspace = true }
config = { workspace = true }
const-str = { workspace = true }
dirs = { workspace = true }
flexi_logger = { workspace = true }
futures-util = { workspace = true }
inkjet = { workspace = true }
log = { workspace = true }
owo-colors = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
supports-color = { workspace = true }
tap = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
