[package]
name = "kuma_client"
version.workspace = true
edition.workspace = true

[dependencies]
config = { workspace = true }
derivative = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
rust_socketio = { workspace = true }
serde = { workspace = true }
serde_alias = { workspace = true }
serde_json = { workspace = true }
serde_merge = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true }
serde-inline-default = { workspace = true }
shadow-rs = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
