[package]
name = "kuma-client"
description = "Rust wrapper for the Uptime Kuma Socket.IO API"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
categories = ["api-bindings"]
keywords = ["uptime-kuma", "api", "monitoring"]

[features]
private-api = []
uptime-kuma-v1 = []

[dependencies]
dateparser = { workspace = true }
config = { workspace = true }
const-str = { workspace = true }
derivative = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
native-tls = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rust_socketio = { workspace = true }
serde = { workspace = true }
serde_alias = { workspace = true }
serde_json = { workspace = true }
serde_merge = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true }
serde-inline-default = { workspace = true }
shadow-rs = { workspace = true }
strum = { workspace = true }
tap = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
totp-rs = { workspace = true }
url = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
